--- a/Courseworks/bin/AndroidManifest.xml
+++ b/Courseworks/bin/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <!-- Login activity -->
         <activity
-            android:name="com.aisaacroth.courseworks.views.Login"
+            android:name="com.aisaacroth.courseworks.views.LoginView"
             android:label="@string/title_activity_login"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar"
             android:windowSoftInputMode="adjustResize|stateVisible" >
@@ -47,7 +47,7 @@
 
         <!-- Splash Screen -->
         <activity
-            android:name="com.aisaacroth.courseworks.views.Splash"
+            android:name="com.aisaacroth.courseworks.views.SplashView"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
