--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity
             android:name="com.aisaacroth.courseworks.views.Main"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >
+            android:theme="@style/ActionBarMain">
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.aisaacroth.courseworks.SearchResultsActivity" />
