--- a/Courseworks/bin/AndroidManifest.xml
+++ b/Courseworks/bin/AndroidManifest.xml
@@ -15,10 +15,17 @@
         android:icon="@drawable/courseworks_logo_login"
         android:theme="@style/AppTheme" >
 
-        <!-- AnnouncementView Activity -->
+        <!-- AnnouncementList Activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.AnnouncementListView"
-            android:label="@string/title_activity_announcment_list_view">
+            android:label="@string/title_activity_announcment_list_view" >
+        </activity>
+
+        <!-- AnnouncementView Activity -->
+        <activity
+            android:name="com.aisaacroth.courseworks.views.AnnouncementView"
+            android:label="@string/title_activity_announcement_view"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
 
         <!-- CalendarView Activity -->
@@ -39,7 +46,7 @@
         <activity
             android:name="com.aisaacroth.courseworks.views.Main"
             android:label="@string/app_name"
-            android:theme="@style/ActionBarMain">
+            android:theme="@style/ActionBarMain" >
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.aisaacroth.courseworks.SearchResultsActivity" />
@@ -67,11 +74,6 @@
             android:name="com.aisaacroth.courseworks.views.HiddenWebView"
             android:label="@string/title_activity_hidden_web_view"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
-        <activity
-            android:name="com.aisaacroth.courseworks.views.AnnouncementView"
-            android:label="@string/title_activity_announcement_view"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
     </application>
 
