--- a/Courseworks/bin/AndroidManifest.xml
+++ b/Courseworks/bin/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity
             android:name="com.aisaacroth.courseworks.views.AnnouncementView"
             android:label="@string/title_activity_announcement_view"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            android:theme="@android:style/Theme.Holo.Light" >
         </activity>
 
         <!-- CalendarView Activity -->
