--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -12,26 +12,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/pixel"
-        android:theme="@android:color/transparent">
-
-        <!-- AnnouncementList Activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.views.AnnouncementListView"
-            android:label="@string/title_activity_announcment_list_view" >
-        </activity>
+        android:theme="@style/AppTheme">
 
         <!-- AnnouncementView Activity -->
         <activity
             android:name="com.aisaacroth.courseworks.views.AnnouncementView"
             android:label="@string/title_activity_announcement_view"
             android:theme="@android:style/Theme.Holo.Light" >
-        </activity>
-
-        <!-- CalendarView Activity -->
-        <activity
-            android:name="com.aisaacroth.courseworks.views.CalendarView"
-            android:label="@string/title_activity_calendar_view" >
         </activity>
 
         <!-- Login activity -->
