--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
 
         <!-- AnnouncementView Activity -->
         <activity
@@ -61,6 +61,10 @@
             android:name="com.aisaacroth.courseworks.views.HiddenWebView"
             android:label="@string/title_activity_hidden_web_view"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.aisaacroth.courseworks.views.CourseView"
+            android:label="@string/title_activity_course_view" >
         </activity>
     </application>
 
