--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -21,6 +21,13 @@
             android:theme="@android:style/Theme.Holo.Light" >
         </activity>
 
+        <!-- CourseListHolderView -->
+        <activity
+            android:name="edu.columbia.cuit.courseworks.views.CourseListHolderView"
+            android:label="@string/title_activity_course_view"
+            android:theme="@style/ActionBarMain" >
+        </activity>
+
         <!-- Login activity -->
         <activity
             android:name="edu.columbia.cuit.courseworks.views.LoginView"
@@ -34,9 +41,6 @@
             android:name="edu.columbia.cuit.courseworks.views.Main"
             android:label="@string/app_name"
             android:theme="@style/ActionBarMain" >
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value="com.aisaacroth.courseworks.SearchResultsActivity" />
         </activity>
 
         <!-- Splash Screen -->
@@ -65,6 +69,22 @@
         <activity
             android:name="edu.columbia.cuit.courseworks.views.CourseView"
             android:label="@string/title_activity_course_view" >
+        </activity>
+        <activity
+            android:name="edu.columbia.cuit.courseworks.CoursePlaceHolderView"
+            android:label="@string/title_activity_course_place_holder_view" >
+        </activity>
+        <activity
+            android:name="edu.columbia.cuit.courseworks.PastCourseListView"
+            android:label="@string/title_activity_past_course_list_view" >
+        </activity>
+        <activity
+            android:name="edu.columbia.cuit.courseworks.CurrentCourseListView"
+            android:label="@string/title_activity_current_course_list_view" >
+        </activity>
+        <activity
+            android:name="edu.columbia.cuit.courseworks.NextCourseListView"
+            android:label="@string/title_activity_next_course_list_view" >
         </activity>
     </application>
 
