--- a/Courseworks/AndroidManifest.xml
+++ b/Courseworks/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name="edu.columbia.cuit.courseworks.views.AnnouncementView"
             android:label="@string/title_activity_announcement_view"
-            android:theme="@android:style/Theme.Holo.Light" >
+            android:theme="@style/AppTheme">
         </activity>
 
         <!-- CourseListHolderView -->
